# netdisc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml  pypi-main.yml  pypi-test.yml
netdisc/: __init__.py  cisco_nxos.py  juniper.py  paloalto_panos.py
tests/: test_netdisc.py
