[tool.poetry]
name = "netdisc"
version = "0.1.3"
description = ""
authors = ["Codie Jones <codiejones1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^1.9.0"
netmiko = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
